# DL_Traffic_Accident_Detection_YOLO_ConvLSTM

./: fps_benchmark_convlstm.ipynb  fps_benchmark_lstm.ipynb  pyproject.toml
model/: config.py  convlstm.py  inference.py  loader.py  model.py  processing_video.py  split_dataset.py  test_model.py  train.py  utils.py
